# EchoWave

./: .gitignore  ABOUT.md  AGENT_DRIVING.md  AGENT_INPUT_CONTRACT.md  AGENT_MANIFEST.json  AGENT_MANIFEST.md  AGENT_SCHEMAS.md  AGENT_TOOL_SCHEMAS.json  API_REFERENCE.md  BEGINNER_EXAMPLES.md  CASEBOOK_NEXT_90_DAYS.md  CASE_GALLERY.md  CASE_STUDIES.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMUNITY_DESIGN.md  COMMUNITY_SHOWCASE.md  COMPATIBILITY.md  CONTRIBUTING.md  COVERAGE_MATRIX.md  DEMO_PACKS.md  DESIGN_SYSTEM.md  DOCS_INDEX.md  DOCTOR.md  ECOSYSTEM_POSITIONING.md  ENTRYPOINTS.md  ENVIRONMENT_MATRIX.md  EXAMPLES_GALLERY.md  FUNCTION_CALLING_EXAMPLES.md  HOT_CASES.md  INSTALLATION.md  INTEGRATIONS.md  INTRODUCTION.md  LICENSE  LIVE_DEMO.md  MANIFEST.in  MCP_EXAMPLES.md  MCP_TOOL_DESCRIPTORS.json  OPENAI_FUNCTION_SCHEMAS.json  PAGES_DEPLOYMENT.md  (+28 more)
.github/workflows/: pages.yml
benchmarks/: decision_impact_benchmark.py  public_case_benchmark.py  utility_benchmark.py
benchmarks/results/: decision_impact_benchmark.json  decision_impact_benchmark.md  public_case_benchmark.json  public_case_benchmark.md  utility_benchmark.json
constraints/: clean-venv.txt  mixed-scientific-stack.txt  pages-only.txt
docs/: 404.html  index.html  playground.html  site.webmanifest
docs/blog/: btc_vs_gold_under_shocks.html  github_breakout_analogs.html  heatwave_vs_grid_load.html
docs/guide/: agents.html  api.html  ecosystem.html  example-btc-gold-under-shocks.html  example-github-breakout-analogs.html  (+8 more)
guide/: agents.html  api.html  ecosystem.html  example-btc-gold-under-shocks.html  example-github-breakout-analogs.html  example-heatwave-grid-load.html  example-irregular-patient-similarity.html  example-two-curves-similarity.html  example-weekly-traffic-signals.html  getting-started.html  index.html  scenarios.html  tutorials.html
tests/: conftest.py  test_basic.py  test_similarity_method_atlas.py  test_similarity_methods.py  test_v015_regressions.py  test_v016_regressions.py
tools/: generate_preview_assets.py  perf_smoke_similarity_methods.py  refresh_real_tutorial_data.py  release_refresh.py
(+132 files in other folders)
